# citra

./: CMakeLists.txt
src/citra/: CMakeLists.txt
src/citra_qt/: CMakeLists.txt
src/core/: CMakeLists.txt  core.cpp  core.vcxproj  core.vcxproj.filters  loader.cpp  mem_map_funcs.cpp
src/core/arm/interpreter/: armsupp.cpp
src/core/file_sys/: blob.cpp  blob.h  file_sys.cpp  file_sys.h  file_sys_ctr.cpp  file_sys_ctr.h  volume.h  volume_exefs.cpp  volume_exefs.h
src/core/hle/: svc.cpp
src/core/hle/service/: apt.h  gsp.cpp  gsp.h
src/video_core/renderer_opengl/: renderer_opengl.cpp
